--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+package-lock.json
+
+.vscode/
+
+*.webp
+*.png
+*.jpg
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
 logs
 *.log
