vite test framework ok

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,6 @@
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
-
 }
