main.test.tsx, todo: run test graph context

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,6 +24,6 @@
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true
   },
-  "include": ["src", "__tests__"],
+  "include": ["src", "setupTests.ts"],
   "exclude": ["node_modules"]
 }
